# lego

./: Lego.xlsx  README.md  README_GH_PAGES.md  app.js  apply_local_placeholders.py  check_image_status.py  deploy_to_docs.py  enrich_rebrickable.py  image_check_report.json  index.html  parse_xlsx.py  products.backup.json  products.backup.localplace.json  products.backup.placeholder.json  products.backup.wikiplace.json  products.json  products_with_names.json  pyproject.toml  rebrickable_cache.backup.json  rebrickable_cache.json  refresh_cache.py  set_placeholders.py  styles.css  targeted_fix_missing_title.py  validate_and_fix_images.py
.github/workflows/: deploy.yml
docs/: app.js  products.json  products_with_names.json  rebrickable_cache.json
