[tool.poetry]
name = "lego-catalog"
package-mode = false
version = "0.1.0"
description = "LEGO set catalog manager and GitHub Pages site"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
openpyxl = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
